# agile-autonogrammer

./: .gitignore  21ST-DEV-STATUS.md  21st-dev-magic-setup.md  API_INFRASTRUCTURE_SUMMARY.md  KATALYST-PRDS.md  MULTI_PROVIDER_AUTH_DEMO.md  PRCBD_KATALYST_INTEGRATION.md  PRCBD_MULTITHREADING_MODULE.md  PRCBD_SHARED_PACKAGES.md  PRCBD_TURBOREPO_ARCHITECTURE.md  PRCBD_WORKER_POOL_ARCHITECTURE.md  QUANTUM_README.md  README.md  SECURITY_AUDIT.md  VERCEL_DEPLOYMENT_GUIDE.md  biome.json  build-fallback.js  demo_integration.md  deno.json  index.html  magic-demo.html  magic-usage-examples.md  package.json  package.monorepo.json  pnpm-workspace.yaml  quick_start_api.sh  setup-magic-api-key.sh  test-magic-integration.js  test_api_infrastructure.js  test_integration.jl  tsconfig.json  turbo.json  vercel.json
.claude/commands/: meta.md
.turbo/cache/: 351f3887255b4b5f-meta.json  351f3887255b4b5f.tar.zst  606ca1cef3b055db-meta.json  7210cf1014ae52e7-meta.json  7210cf1014ae52e7.tar.zst  cd319cb566e58b96-meta.json  cd9612e58767c615-meta.json
api/: info.js
docs/prds/: 000-migration-overview.md  001-core-framework-migration.md  002-wasm-runtime-integration.md  003-ai-ml-integration.md  004-build-system-integration.md  005-ui-design-system.md  006-developer-tooling-testing.md
frontend-examples/: modern-dashboard.html
julia/: Project.toml
julia/src/: KanbanQuantum.jl  quantum_core.jl  superposition.jl  types.jl
scripts/: build-deno-wasm.ts  changelog-action.ts  setup-multithreading.ts
src/: commands.ts  tools.ts
src/commands/: modelhealth.tsx  modelmigrate.tsx  (+2 more)
wasm-modules/elixir-runtime-wasm/: Cargo.toml
wasm-modules/elixir-runtime-wasm/src/: lib.rs
wasm-modules/rust-core-wasm/: Cargo.toml
wasm-modules/rust-core-wasm/src/: lib.rs
(+52 files in other folders)
