[package]
name = "katalyst-rust-core-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly build of Katalyst Rust core"

[lib]
crate-type = ["cdylib"]

[dependencies]
katalyst-rust-core = { path = "../../src/rust-core", features = ["web"] }

# WebAssembly dependencies
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
tracing-wasm = { workspace = true }

[dependencies.web-sys]
workspace = true
features = [
  "console",
  "Window",
  "Worker",
  "MessageEvent",
  "MessagePort",
  "Performance",
  "PerformanceObserver",
]